finish functional part

--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
             <div class="cell number" id="2">2</div>
             <div class="cell number" id="3">3</div>
             <div class="cell action" id="substraction">-</div>
-            <div class="cell number" id="0"> 0</div>
-            <div class="cell number" id="point">.</div>
+            <div class="cell number" id="0">0</div>
+            <div class="cell" id="point">.</div>
             <div class="cell" id="equal">=</div>
             <div class="cell action" id="addition">+</div>
         </div>
+        <div id="refer">Smollpat Calc</div>
     </div>
 
 </body>
